--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </button> -->
         <button
           type="button"
-          class="btn btn-danger mr-3"
+          class="btn btn-danger mr-3 mb-4"
           style="font-size: larger; font-weight: bold"
           onclick="limpar(); enableInput();"
         >
